<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_dialog_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGreen"
        android:text="@string/text_alert" />

    <Button
        android:id="@+id/btn_dialog_list_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/colorLightBlue"
        android:text="@string/text_list_simple" />

    <Button
        android:id="@+id/btn_dialog_list_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/colorLightYellow"
        android:text="@string/text_list_radio" />

    <Button
        android:id="@+id/btn_dialog_list_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/colorLightPurple"
        android:text="@string/text_list_check" />

    <Button
        android:id="@+id/btn_dialog_custom_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/colorPink"
        android:text="@string/text_custom_adapter" />

    <Button
        android:id="@+id/btn_dialog_custom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@color/colorPowderBlue"
        android:text="@string/text_custom_view" />
</LinearLayout>
